--- a/composer.json
+++ b/composer.json
@@ -1,35 +1,18 @@
 {
-  "name": "mangdin/thinkphp5.1-weixinpay",
-  "description": "thinkphp5.1 weixinpay权限核心文件",
-  "keywords": [
-    "mangdin",
-    "thinkphp5.1",
-    "auth"
-  ],
-  "homepage": "https://github.com/mangdin/thinkphp5.1-weixinpay",
-  "type": "thinkphp-extension",
-  "license": "Apache-2.0",
-  "support": {
-    "source": "https://github.com/mangdin/thinkphp5.1-weixinpay"
-  },
-  "authors": [
-    {
-      "name": "mangdin",
-      "email": "service@mangdin.com"
-    }
-  ],
-  "minimum-stability": "stable",
-  "require": {
-    "php": ">=5.6.0",
-    "thinkphp": ">=5.1.0"
-   
-  },
-  "autoload": {
-    "psr-4": {
-      "mangdin\\": "weixinpay"
-    }
-  },
-  "config": {
-    "process-timeout": 1800
-  }
+    "name": "mangdin/thinkphp5.1-weixinpay",
+    "description": "thinkphp5.1 微信扫码支付",
+    "license": "Apache-2.0",
+    "authors": [
+        {
+            "name": "mangdin",
+            "email": "service@mangdin.com"
+        }
+    ],
+    "minimum-stability": "dev",
+    "require": {},
+    "autoload": {
+        "psr-4": {
+          "mangdin\\weixinpay\\": ""
+        }
+      }
 }
